[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ai/mob_aim_laser.gd" type="Script" id=1]
[ext_resource path="res://assets/mat_red_glow.tres" type="Material" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.025, 0.025, 1 )

[node name="mob_aim_laser" type="RayCast"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 9
script = ExtResource( 1 )

[node name="rotator" type="Spatial" parent="."]

[node name="Spatial" type="Spatial" parent="rotator"]

[node name="MeshInstance" type="MeshInstance" parent="rotator/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="rotator/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="rotator/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="rotator/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
